[package]
name = "godot-glam"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Alves <henriquelalves@gmail.com>"]
license = "MIT"
description = "Godot Lightweight Addon Manager"
homepage = "https://github.com/henriquelalves/glam"
repository = "https://github.com/henriquelalves/glam"
keywords = ["cli", "godot", "addon", "manager"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
colored = "2"
serde_json = "1.0"